Make pasting from remote apps on X time out independently of processor speed.  Bug 87207, patch by Rickard Westman <riw@swipnet.se>, r=pavlov, sr=blizzard CVS: ---------------------------------------------------------------------- nsClipboard.cpp CVS: ----------------------------------------------------------------------